# model_predictive_control

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-single-platform.yml
basic_template/: CMakeLists.txt  Makefile  README.md
basic_template/include/: mpc.h
basic_template/src/: main.cpp  mpc.cpp
learning_inside_mpc/: README.md
